Code Refactor and Sample Page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Welcome to My Flask App</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WasabiSullivan Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <h1>Hello, World!</h1>
-</body>
+<div class="typing">
+    WasabiSullivan
+    <div class="cursor">|</div>
+</div>
 </html>
