--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<!-- Fancybox CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css" />
+
+<!-- jQuery (Fancybox depends on it) -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!-- Fancybox JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +17,26 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <div class="typing">
-    WasabiSullivan
+    wasabisullivan
     <div class="cursor">|</div>
 </div>
+
+<!-- Splash Screen -->
+<div id="splashScreen" class="splash">
+    WasabiSullivan
+    <script src="splash.js"></script>
+</div>
+
+<!-- Black Overlay -->
+<div id="blackOverlay" class="overlay"></div>
+
+<!-- List of Locations -->
+<div id="locations" class="locations">
+    <ul>
+        <li>Location 1</li>
+        <li>Location 2</li>
+        <!-- ... more locations ... -->
+    </ul>
+</div>
+
 </html>
