--- a/index.html
+++ b/index.html
@@ -16,15 +16,11 @@
     <title>WasabiSullivan Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<div class="typing">
-    wasabisullivan
-    <div class="cursor">|</div>
-</div>
 
 <!-- Splash Screen -->
 <div id="splashScreen" class="splash">
-    WasabiSullivan
     <script src="splash.js"></script>
+    wasabisullivan<div class="cursor"></div>
 </div>
 
 <!-- Black Overlay -->
@@ -33,8 +29,8 @@
 <!-- List of Locations -->
 <div id="locations" class="locations">
     <ul>
-        <li>Location 1</li>
-        <li>Location 2</li>
+        <li><a href="images_template.html">japan</a></li>
+        <li><a href="path/to/location2.html">cars&coffee</a></li>
         <!-- ... more locations ... -->
     </ul>
 </div>
