--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WasabiSullivan Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>wasabisullivan</title>
+    <link rel="stylesheet" href="indexstyles.css">
 </head>
 
 <!-- Splash Screen -->
@@ -29,7 +29,7 @@
 <!-- List of Locations -->
 <div id="locations" class="locations">
     <ul>
-        <li><a href="images_template.html">japan</a></li>
+        <li><a href="japan.html">japan</a></li>
         <li><a href="path/to/location2.html">cars&coffee</a></li>
         <!-- ... more locations ... -->
     </ul>
