--- a/images_template.html
+++ b/images_template.html
@@ -12,7 +12,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>wasabisullivan</title>
+    <link rel="stylesheet" href="indexstyles.css">
 </head>
 <body>
 <div class="image-grid">
